changes' is much more useful than 'misc edits' or 'code cleanup'.
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

Add stringbuffer_append_printf() and stringbuffer_append_stringbuffer().
  common/stringbuffer.c
  include/stringbuffer.h
Andreas Kirschbaum 2008-02-07

Change heading of high score command output to match the actual highscore data
by using <> instead of [] around max grace, hp, and sp.  The reason is that
when [max x] gets to a client that supports mediaTags, the text is treated
as a tag, and a log message is created about an unknown tag.
  server/hiscore.c
Kevin Bulgrien, 2008-02-06

Use map's name on the slaying page.
 utils/mapper.c
Nicolas Weeger, 2008-02-05

Add exits leading to a map. Changes tag to be coherent.
 utils/mapper.c
 utils/templates/map.template map_with_exit.template
Added templates:
 utils/templates/map_exit_to.template map_no_exit_to.template map_with_exit_to.template
Nicolas Weeger, 2008-02-05

Extract map page writing to separate function. Make names coherent.
Delay map loading, reducing memory consumption. Use map name in exit list.
Fix documentation.
 utils/mapper.c
Nicolas Weeger, 2008-02-05

Always get map's name at cost of memory use.
 utils/mapper.c
Nicolas Weeger, 2008-02-05

Parameter to toggle exit info generation.
 utils/mapper.c
Nicolas Weeger, 2008-02-05

Simplify code.
 utils/mapper.c
Nicolas Weeger, 2008-02-05

Fix warnings.
 utils/mapper.c
Nicolas Weeger, 2008-02-04

Get the real map's name.
 utils/mapper.c
Nicolas Weeger, 2008-02-04

Keep pointer to region instead of just the name.
 utils/mapper.c
Nicolas Weeger, 2008-02-03

Major refactoring, to prepare for more fun things.
 utils/mapper.c
Nicolas Weeger, 2008-02-03
